--- a/package.json
+++ b/package.json
@@ -25,7 +25,17 @@
         "@angular/router": "~9.1.0",
         "rxjs": "~6.5.4",
         "tslib": "^1.10.0",
-        "zone.js": "~0.10.2"
+        "zone.js": "~0.10.2",
+        "@angular/cdk": "^9.0.1",
+        "@angular/localize": "~9.0.2",
+        "@angular/material": "^9.0.1",
+        "@angular/fire": "^5.3.0",
+        "firebase": "^7.6.1",
+        "@ngrx/effects": "^8.6.0",
+        "@ngrx/entity": "^8.6.0",
+        "@ngrx/store": "^8.6.0",
+        "@ngrx/store-devtools": "^8.6.0",
+        "ngx-image-cropper": "^3.0.3"
     },
     "devDependencies": {
         "@angular-devkit/build-angular": "~0.901.0",
@@ -46,6 +56,7 @@
         "protractor": "~5.4.3",
         "ts-node": "~8.3.0",
         "tslint": "~6.1.0",
-        "typescript": "~3.8.3"
+        "typescript": "~3.8.3",
+        "ngrx-store-freeze": "^0.2.4"
     }
 }
